Refactor SOAP token validation and update loggingFix: correct SOAP namespace and element name for validateToken